# anghiari

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  threat.txt
scripts/: check.py  release.py
src/anghiari/: __init__.py  api.py  cli.py  config.py  embedder.py  indexer.py  mapper.py  mcp.py  models.py  prompt.py  scanner.py
tests/: test_config.py  test_interface_and_regression.py  test_mapper_contract.py  test_prompt_and_scanner.py
